# lry-openpi-RLT

./: .gitignore  README.md  pyproject.toml
convert_data/: convert2lerobot_vitai_dataset.py
rlt_online_rl/: README.md  keyboard_actor_eval.py  keyboard_toggle_teleop_record_reward_isolation.py  pyproject.toml
rlt_online_rl/configs/base/: online_rl.base.yaml  runtime.dual_machine.yaml  runtime.local_debug.yaml
rlt_online_rl/configs/tasks/agilex_ethernet/: online_rl.yaml
rlt_online_rl/configs/tasks/dobot_umi/: dobot_umi.yaml  online_rl.yaml
rlt_online_rl/launch/: fake_machine_a.py  launch_actor_eval.py  launch_machine_b.py  launch_robot_rollout.py
rlt_online_rl/scripts/: build_replay.py  run_online_rl.py  stream_learner_metrics_to_wandb.py
rlt_online_rl/scripts/offline/: README.md  _common.py  build_replay_from_lerobot.py  compute_delta_norm_stats.py  eval_action_fit.py  eval_episode_q.py  eval_intervention_risk.py  offline_train_from_replay.py  visualize_offline_training.py
rlt_online_rl/scripts/replay_real_robot/: README.md  export_episode_joint_playback.py  play_exported_joint_chunks_on_robot.py
rlt_online_rl/scripts/tools/: inspect_replay_journal.py  plot_learner_metrics.py
rlt_online_rl/src/rlt_online_rl/: README.md  __init__.py  action_representation.py  config.py  inference.py  networks.py  replay.py  runtime_logging.py  trainer.py
rlt_online_rl/tests/: test_config.py  test_inference.py  test_networks.py  test_replay.py  test_trainer.py
rlt_online_rl/train_deploy_alignment/: dobot_umi_ros.py  manual_signal_bridge.py  pika_sync_ros.py
(+34 files in other folders)
