[project]
name = "rlt-online-rl"
version = "0.1.0"
description = "Standalone online RL subsystem for RLT"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "flax==0.10.2",
    "jax[cuda12]==0.5.3",
    "numpy>=1.22.4,<2.0.0",
    # When installing with plain pip in a standalone conda env, install the
    # sibling package `packages/openpi-client` first.
    "openpi-client",
    "opencv-python>=4.10.0.84",
    "optax>=0.2.4",
    "PyYAML>=6.0.2",
    "tyro>=0.9.5",
    "websockets>=14.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
]
monitor = [
    "wandb>=0.19.0",
]
robot = [
    "rclpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rlt_online_rl"]
